// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyze-datamodel-structure should create basic model definition 1`] = `
Object {
  "Role": Object {
    "dbName": null,
    "name": "Role",
    "values": Array [
      Object {
        "dbName": null,
        "name": "USER",
      },
      Object {
        "dbName": null,
        "name": "ADMIN",
      },
    ],
  },
}
`;

exports[`analyze-datamodel-structure should create basic model definition 2`] = `
Object {
  "Post": Object {
    "dbName": null,
    "fields": Array [
      Object {
        "default": Object {
          "args": Array [],
          "name": "autoincrement",
        },
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": true,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "id",
        "type": "Int",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "title",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "user",
        "relationFromFields": Array [
          "userId",
        ],
        "relationName": "PostToUser",
        "relationOnDelete": "NONE",
        "relationToFields": Array [
          "id",
        ],
        "type": "User",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": true,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "userId",
        "type": "Int",
      },
    ],
    "idFields": Array [],
    "isEmbedded": false,
    "isGenerated": false,
    "name": "Post",
    "uniqueFields": Array [],
    "uniqueIndexes": Array [],
  },
  "User": Object {
    "dbName": null,
    "fields": Array [
      Object {
        "default": Object {
          "args": Array [],
          "name": "autoincrement",
        },
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": true,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "id",
        "type": "Int",
      },
      Object {
        "default": Object {
          "args": Array [],
          "name": "now",
        },
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "createdAt",
        "type": "DateTime",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": true,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "email",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "weight",
        "type": "Float",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "is18",
        "type": "Boolean",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "name",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": true,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "successorId",
        "type": "Int",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "successor",
        "relationFromFields": Array [
          "successorId",
        ],
        "relationName": "BlogOwnerHistory",
        "relationOnDelete": "NONE",
        "relationToFields": Array [
          "id",
        ],
        "type": "User",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "predecessor",
        "relationFromFields": Array [],
        "relationName": "BlogOwnerHistory",
        "relationOnDelete": "NONE",
        "relationToFields": Array [],
        "type": "User",
      },
      Object {
        "default": "USER",
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "enum",
        "name": "role",
        "type": "Role",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": true,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "posts",
        "relationFromFields": Array [],
        "relationName": "PostToUser",
        "relationOnDelete": "NONE",
        "relationToFields": Array [],
        "type": "Post",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": true,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "keywords",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "biography",
        "type": "Json",
      },
    ],
    "idFields": Array [],
    "isEmbedded": false,
    "isGenerated": false,
    "name": "User",
    "uniqueFields": Array [],
    "uniqueIndexes": Array [],
  },
}
`;

exports[`analyze-datamodel-structure should create basic model definition 3`] = `
Object {
  "Post": Object {
    "enums": Array [],
    "model": Object {
      "dbName": null,
      "fields": Array [
        Object {
          "default": Object {
            "args": Array [],
            "name": "autoincrement",
          },
          "hasDefaultValue": true,
          "isGenerated": false,
          "isId": true,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "id",
          "type": "Int",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "title",
          "type": "String",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "object",
          "name": "user",
          "relationFromFields": Array [
            "userId",
          ],
          "relationName": "PostToUser",
          "relationOnDelete": "NONE",
          "relationToFields": Array [
            "id",
          ],
          "type": "User",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": true,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "userId",
          "type": "Int",
        },
      ],
      "idFields": Array [],
      "isEmbedded": false,
      "isGenerated": false,
      "name": "Post",
      "uniqueFields": Array [],
      "uniqueIndexes": Array [],
    },
    "relations": Array [
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "user",
        "relationFromFields": Array [
          "userId",
        ],
        "relationName": "PostToUser",
        "relationOnDelete": "NONE",
        "relationToFields": Array [
          "id",
        ],
        "type": "User",
      },
    ],
    "scalars": Array [
      Object {
        "default": Object {
          "args": Array [],
          "name": "autoincrement",
        },
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": true,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "id",
        "type": "Int",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "title",
        "type": "String",
      },
    ],
  },
  "User": Object {
    "enums": Array [
      Object {
        "default": "USER",
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "enum",
        "name": "role",
        "type": "Role",
      },
    ],
    "model": Object {
      "dbName": null,
      "fields": Array [
        Object {
          "default": Object {
            "args": Array [],
            "name": "autoincrement",
          },
          "hasDefaultValue": true,
          "isGenerated": false,
          "isId": true,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "id",
          "type": "Int",
        },
        Object {
          "default": Object {
            "args": Array [],
            "name": "now",
          },
          "hasDefaultValue": true,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "createdAt",
          "type": "DateTime",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": true,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "email",
          "type": "String",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "weight",
          "type": "Float",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "is18",
          "type": "Boolean",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "name",
          "type": "String",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": true,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "successorId",
          "type": "Int",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "object",
          "name": "successor",
          "relationFromFields": Array [
            "successorId",
          ],
          "relationName": "BlogOwnerHistory",
          "relationOnDelete": "NONE",
          "relationToFields": Array [
            "id",
          ],
          "type": "User",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "object",
          "name": "predecessor",
          "relationFromFields": Array [],
          "relationName": "BlogOwnerHistory",
          "relationOnDelete": "NONE",
          "relationToFields": Array [],
          "type": "User",
        },
        Object {
          "default": "USER",
          "hasDefaultValue": true,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "enum",
          "name": "role",
          "type": "Role",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": true,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "object",
          "name": "posts",
          "relationFromFields": Array [],
          "relationName": "PostToUser",
          "relationOnDelete": "NONE",
          "relationToFields": Array [],
          "type": "Post",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": true,
          "isReadOnly": false,
          "isRequired": false,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "keywords",
          "type": "String",
        },
        Object {
          "hasDefaultValue": false,
          "isGenerated": false,
          "isId": false,
          "isList": false,
          "isReadOnly": false,
          "isRequired": true,
          "isUnique": false,
          "isUpdatedAt": false,
          "kind": "scalar",
          "name": "biography",
          "type": "Json",
        },
      ],
      "idFields": Array [],
      "isEmbedded": false,
      "isGenerated": false,
      "name": "User",
      "uniqueFields": Array [],
      "uniqueIndexes": Array [],
    },
    "relations": Array [
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "successor",
        "relationFromFields": Array [
          "successorId",
        ],
        "relationName": "BlogOwnerHistory",
        "relationOnDelete": "NONE",
        "relationToFields": Array [
          "id",
        ],
        "type": "User",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "predecessor",
        "relationFromFields": Array [],
        "relationName": "BlogOwnerHistory",
        "relationOnDelete": "NONE",
        "relationToFields": Array [],
        "type": "User",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": true,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "object",
        "name": "posts",
        "relationFromFields": Array [],
        "relationName": "PostToUser",
        "relationOnDelete": "NONE",
        "relationToFields": Array [],
        "type": "Post",
      },
    ],
    "scalars": Array [
      Object {
        "default": Object {
          "args": Array [],
          "name": "autoincrement",
        },
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": true,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "id",
        "type": "Int",
      },
      Object {
        "default": Object {
          "args": Array [],
          "name": "now",
        },
        "hasDefaultValue": true,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "createdAt",
        "type": "DateTime",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": true,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "email",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "weight",
        "type": "Float",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "is18",
        "type": "Boolean",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "name",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": true,
        "isReadOnly": false,
        "isRequired": false,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "keywords",
        "type": "String",
      },
      Object {
        "hasDefaultValue": false,
        "isGenerated": false,
        "isId": false,
        "isList": false,
        "isReadOnly": false,
        "isRequired": true,
        "isUnique": false,
        "isUpdatedAt": false,
        "kind": "scalar",
        "name": "biography",
        "type": "Json",
      },
    ],
  },
}
`;
